Add styling to demo

--- a/examples/01-simple-periodic/eventsource.html
+++ b/examples/01-simple-periodic/eventsource.html
@@ -1,17 +1,30 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta charset="utf-8" />
+    <meta charset="utf-8"/>
     <title>EventSource example</title>
     <script>
-      var es = new EventSource("demo");
-      es.addEventListener("message", function (event) {
-    	  var div = document.createElement("div");
-          div.appendChild(document.createTextNode(event.data));
-          document.body.appendChild(div);
-      });
+        var es = new EventSource('demo');
+        es.addEventListener('message', function(event) {
+            var $messages = document.querySelectorAll('.chat-messages')[0];
+            var message = document.createElement('div');
+            message.innerHTML = event.data;
+            message.classList.add('chat-message');
+            if ($messages.childNodes.length !== 0) {
+                $messages.insertBefore(message, $messages.firstChild);
+            } else {
+                $messages.appendChild(message);
+            }
+        });
     </script>
+
+    <link href="styles.css" media="all" rel="stylesheet" />
 </head>
 <body>
+    <div class="chat">
+        <div class="chat-header"></div>
+        <div class="chat-messages"></div>
+        <div class="chat-footer"></div>
+    </div>
 </body>
 </html>
