--- a/examples/04-simple-chat/eventsource.html
+++ b/examples/04-simple-chat/eventsource.html
@@ -4,11 +4,12 @@
     <meta charset="utf-8"/>
     <title>EventSource example</title>
     <script>
-        var es = new EventSource('demo');
+        var es = new EventSource('demo'), username = '';
         es.addEventListener('message', function(event) {
+            var data = JSON.parse(event.data);
             var $messages = document.querySelectorAll('.chat-messages')[0];
             var message = document.createElement('div');
-            message.innerHTML = event.data;
+            message.innerHTML = `<strong>${data.username}:</strong> ${data.message}`;
             message.classList.add('chat-message');
             if ($messages.childNodes.length !== 0) {
                 $messages.insertBefore(message, $messages.firstChild);
@@ -23,9 +24,27 @@
                 $event.preventDefault();
                 var $input = document.querySelectorAll('.chat-form input')[0];
                 if ($input.value.length) {
-                    fetch('/message?message=' + $input.value).then(function() {
+                    fetch(`/message?message=${$input.value}&username=${username}`).then(function() {
                         $input.value = '';
                     });
+                }
+            });
+        });
+
+        document.addEventListener('DOMContentLoaded', function() {
+            var $chatForm = document.querySelectorAll('.username-form')[0];
+            $chatForm.addEventListener('submit', function($event) {
+                $event.preventDefault();
+                var $input = document.querySelectorAll('.username-form input')[0];
+                if ($input.value.length > 3) {
+                    document.activeElement.blur();
+                    username = $input.value;
+                    document.querySelectorAll('.chat-header')[0].innerHTML = username;
+                    document.body.classList.add('hide-username');
+                    setTimeout(function() {
+                        document.querySelectorAll('.username-form-container')[0].style.display = 'none';
+                        document.querySelectorAll('.chat-form input')[0].focus();
+                    }, 800);
                 }
             });
         });
@@ -43,6 +62,12 @@
             <button type="submit">Send</button>
         </form>
     </div>
+</div>
+<div class="username-form-container">
+    <form class="username-form">
+        <input type="text" placeholder="Enter username" autofocus="">
+        <button type="submit">Enter</button>
+    </form>
 </div>
 </body>
 </html>
